--- a/asset/rg.css
+++ b/asset/rg.css
@@ -86,7 +86,7 @@ video {
   margin: 20px 0 20px 0;
 }
 #claimbtn {
-  background: grey;
+  background: #555;
   cursor: not-allowed;
 }
 #claimbtn:hover {
