--- a/asset/rg.css
+++ b/asset/rg.css
@@ -93,8 +93,9 @@ video {
   background: 555;
   color: #f44336;
 }
-.topright{
-  position:absolute;
-  top:0;
-  right:0;
- }
+.topright {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 0;
+}
